k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: url-shortner-ns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      imagePullSecrets:
        - name: redis-key
      containers:
      - name: postgres-db-container
        image: dhi.io/postgres:18
        ports:
        - containerPort: 5432
        startupProbe:
          exec:
            command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
          failureThreshold: 10
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/18/data
          
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
