k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: url-shortner-ns
spec:
  selector:
    app: url-app
  ports:
  - port: 3000
    targetPort: 3000
