k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: url-shortner-ns
spec:
  selector:
    app: postgres-db
  ports:
  - port: 5432
    targetPort: 5432
