k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: url-shortner-ns
spec:
  selector:
    app: redis-cache
  ports:
  - port: 6379
    targetPort: 6379
