k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortner-ingress
  namespace: url-shortner-ns
  labels:
    app.kubernetes.io/name: url-shortner-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-service
            port: 
              number: 3000
